# janos

./: .env.example  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  README_ja.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/bench/: Cargo.toml
crates/bench/benches/: movegen.rs
crates/csa/: Cargo.toml
crates/csa/src/: main.rs  moves.rs  protocol.rs
crates/match-runner/: Cargo.toml
crates/match-runner/src/: engine.rs  main.rs
crates/sekirei-bench/: Cargo.toml
crates/sekirei-bench/benches/: movegen.rs
crates/sekirei-core/: Cargo.toml
crates/sekirei-core/src/: bitboard.rs  board.rs  color.rs  eval.rs  hand.rs  lib.rs  movegen.rs  mv.rs  nnue.rs  perft.rs  piece.rs  search.rs  sfen.rs  speculative.rs  square.rs  tt.rs  zobrist.rs
crates/sekirei-csa/: Cargo.toml
crates/sekirei-csa/src/: main.rs  moves.rs  protocol.rs
crates/sekirei-match-runner/: Cargo.toml
crates/sekirei-match-runner/src/: engine.rs  main.rs
crates/sekirei-train/: Cargo.toml
crates/sekirei-train/src/: csa.rs  exporter.rs  main.rs  positions.rs  scored.rs  teacher_cache.rs  trainer.rs
crates/sekirei-usi/: Cargo.toml
crates/sekirei-usi/src/: main.rs
crates/shogi-core/: Cargo.toml
crates/shogi-core/src/: bitboard.rs  board.rs  hand.rs  movegen.rs  nnue.rs  piece.rs  policy.rs  search.rs  speculative.rs  square.rs  tt.rs  zobrist.rs
crates/train/: Cargo.toml
crates/train/src/: csa.rs  main.rs  trainer.rs
crates/usi/: Cargo.toml
crates/usi/src/: main.rs
scripts/: redo_quietset_bc.sh  strength_regression.sh  train_with_shogiesa_quietset.sh
