[workspace]
members = [
    "crates/sekirei-core",
    "crates/sekirei-bench",
    "crates/sekirei-usi",
    "crates/sekirei-train",
    "crates/sekirei-csa",
    "crates/sekirei-match-runner",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
